[package]
name = "jarvis-tp-link-hs-110-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
chrono = "0.4"
conv = "0.3"
gcp-bigquery-client = "0.9"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = "0.52"
kube-runtime = "0.52"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
